--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -32,6 +32,10 @@ a {
   font-weight: 300;
 }
 
+.donate--link a {
+  font-weight: 500;
+}
+
 body,
 html {
   font-family: $poppins;
